bdr.BDR.scala.error
Erreur de compilation :
BDR:19: error: too many arguments for method droite: ()Unit
    droite(180);
          ^