bdr.BDR.scala.code
var fini:Boolean = true;

while (fini==true) {
  
  if (estSurMessage==false) { fini=false; }
  else {
  
  
  if (litMessage=="R") {
    droite();
    avance();
  }
  
  else if (litMessage=="L") {
    gauche();
    avance();
    }
  else if (litMessage=="I") {
    droite(180);
    avance();
  }
  
  else if (litMessage=="A") {
    avance();
  }
  
  else if (litMessage=="B") {
    avance(2);
  }
  
  else if (litMessage=="C") {
    avance(3);
  }
  
  else if (litMessage=="Z") {
    
  }
    
  else if (litMessage=="Y") {
    recule(2);
  }
  
  else if (litMessage=="X") {
    recule(3);
  }
    
    
  }
}